# q2-kmerizer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
environment-files/: q2-kmerizer-qiime2-amplicon-2024.10.yml  q2-kmerizer-qiime2-amplicon-2024.5.yml  q2-kmerizer-qiime2-amplicon-2025.10.yml  q2-kmerizer-qiime2-amplicon-2025.4.yml  q2-kmerizer-qiime2-amplicon-2026.4.yml  q2-kmerizer-rachis-qiime2-2026.4.yml
environments/: q2-kmerizer-qiime2-amplicon-2024.10.yml  q2-kmerizer-qiime2-amplicon-2024.5.yml
q2_kmerizer/: __init__.py  _methods.py  _version.py  citations.bib  plugin_setup.py
q2_kmerizer/tests/: __init__.py  test_methods.py
